--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300&family=Roboto&family=Source+Code+Pro&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300&family=Roboto&family=Source+Code+Pro&display=swap');
 
 body {
   background-color: rgb(24, 24, 27);
 }
 
 .Logo_L {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 40px;
   border-bottom: solid 2px;
   border-left: solid 2px;
@@ -22,7 +22,7 @@ body {
 }
 
 .Logo_A {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 40px;
   padding-left: 2px;
   padding-right: 2px;
@@ -30,15 +30,15 @@ body {
 }
 .Content_NameTyped {
   margin: 0;
-  font-size: clamp(1rem, 3vw + 1rem, 4rem);
+  font-size: 24px;
   position: relative;
   color: white;
-  font-family: "Source Code Pro", monospace;
+  font-family: 'Source Code Pro', monospace;
   width: max-content;
 }
 .Content_NameTyped::after,
 .Content_NameTyped::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   right: 0;
@@ -47,46 +47,19 @@ body {
 }
 .Content_NameTyped::before {
   background: rgb(24, 24, 27);
-  animation: typewriter 4s steps(23) 1s forwards;
+  animation: typewriter 1s steps(23) 1s forwards;
 }
 .Content_NameTyped::after {
   width: 0.125em;
   background: white;
-  animation: typewriter 4s steps(23) 1s forwards, blink 750ms steps(23) infinite;
+  animation: typewriter 1s steps(23) 1s forwards, blink 750ms steps(23) infinite;
 }
 
-/*aqui*/
-.Content_NameTyped2 {
-  margin: 0;
-  font-size: clamp(1rem, 3vw + 1rem, 4rem);
-  position: relative;
-  color: white;
-  font-family: "Source Code Pro", monospace;
-  width: max-content;
-}
-.Content_NameTyped2::after,
-.Content_NameTyped2::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.Content_NameTyped2::before {
-  background: rgb(24, 24, 27);
-  animation: typewriter 4s steps(21) 1s forwards;
-}
-.Content_NameTyped2::after {
-  width: 0.125em;
-  background: white;
-  animation: typewriter 4s steps(21) 1s forwards, blink 750ms steps(21) infinite;
-}
 .SubText {
   margin-top: 16px;
   opacity: 0;
   transform: translateY(3rem);
-  animation: fadeInUp 2s ease 5s forwards;
+  animation: fadeInUp 2s ease 2s forwards;
 }
 @keyframes typewriter {
   to {
@@ -119,16 +92,18 @@ body {
 .NavBar_Split {
   display: flex;
   justify-content: space-between;
-  width: 1280px;
+  width: 1080px;
   margin-right: auto;
   margin-left: auto;
 }
 
 .NavBar_letters {
   display: flex;
+  align-items: center;
+  justify-content: center;
   color: white;
-  font-family: "Roboto", sans-serif;
-  font-size: 40px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
   gap: 16px;
 }
 .Logo_Container:hover > div {
@@ -149,7 +124,7 @@ body {
 }
 .Project {
   margin-top: 40px;
-  width: 1280px;
+  width: 1080px;
   margin-right: auto;
   margin-left: auto;
   display: flex;
@@ -163,19 +138,20 @@ body {
 .Content_Title {
   padding-bottom: 16px;
   color: white;
-  font-size: 24px;
-  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
 }
 
 .Content_text {
   color: white;
-  font-size: 24px;
-  font-family: "Roboto", sans-serif;
-  max-width: 60ch;
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  max-width: 65ch;
+  height: 250px;
 }
 
 .Project_Container {
-  width: 1280px;
+  width: 1080px;
   margin-bottom: 120px;
   margin-right: auto;
   margin-left: auto;
@@ -185,23 +161,28 @@ body {
   color: white;
   padding-bottom: 60px;
   font-size: 40px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
 }
 
 .profilepic {
   width: 260px;
+  aspect-ratio: 780/681;
   border-radius: 50%;
 }
 .Content_content {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.Content_content > div {
+  height: 400px;
 }
 .Tech_icons {
   margin-top: 60px;
   margin-bottom: 120px;
-  width: 1280px;
+  width: 1080px;
   display: grid;
   margin-right: auto;
   margin-left: auto;
@@ -252,13 +233,12 @@ p {
 
 .Content_Container {
   display: flex;
-  width: 1280px;
+  width: 1080px;
   margin-right: auto;
   margin-left: auto;
-  padding-top: 120px;
-  padding-bottom: 120px;
   gap: 20px;
-  justify-content: space-between;
+  justify-content: space-around;
+  height: 750px;
 }
 
 .ICON_CONTAINER {
@@ -280,7 +260,7 @@ p {
   height: 40px;
   padding-left: 16px;
   padding-right: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   text-decoration: none;
   align-items: center;
@@ -326,7 +306,7 @@ a:hover > .ICON2TEXT {
   height: 40px;
   padding-left: 16px;
   padding-right: 16px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   text-decoration: none;
   align-items: center;
@@ -351,4 +331,46 @@ a:hover > .ICON2TEXT {
 .buttonLANG {
   display: flex;
   width: 200px;
+}
+
+.enlace {
+  color: white;
+  text-decoration: none;
+  display: inline;
+}
+
+.container-enlaces {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.typewriter {
+  font-family: 'Courier', monospace;
+  color: white;
+  font-size: 24px;
+  white-space: nowrap;
+  border-right: 2px solid white;
+  overflow: hidden;
+  width: 0;
+  animation: typing 4s steps(30, end), blink-caret 0.75s step-end infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 260px;
+  } /* Adjust based on the width of your text */
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
 }
