--- a/src/App.css
+++ b/src/App.css
@@ -138,13 +138,13 @@ body {
 .Content_Title {
   padding-bottom: 16px;
   color: white;
-  font-size: 16px;
+  font-size: 18px;
   font-family: 'Roboto', sans-serif;
 }
 
 .Content_text {
   color: white;
-  font-size: 14px;
+  font-size: 16px;
   font-family: 'Roboto', sans-serif;
   max-width: 65ch;
   height: 250px;
@@ -160,7 +160,7 @@ body {
 .Project_Title {
   color: white;
   padding-bottom: 60px;
-  font-size: 40px;
+  font-size: 32px;
   font-family: 'Roboto', sans-serif;
   text-align: center;
 }
@@ -186,7 +186,7 @@ body {
   display: grid;
   margin-right: auto;
   margin-left: auto;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(7, 1fr);
   grid-gap: 30px;
   grid-auto-rows: minmax(100px, auto);
 }
@@ -197,8 +197,8 @@ body {
 .ICON {
   display: flex;
   color: white;
-  width: 80px;
-  height: 80px;
+  width: 40px;
+  height: 40px;
 }
 .ICON2 {
   display: flex;
@@ -226,7 +226,7 @@ p {
   font-size: 16px;
 }
 .Tech_text {
-  font-size: 32px;
+  font-size: 16px;
   color: white;
   text-align: center;
 }
@@ -244,6 +244,8 @@ p {
 .ICON_CONTAINER {
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .img_container {
@@ -373,4 +375,7 @@ a:hover > .ICON2TEXT {
   50% {
     border-color: black;
   }
+}
+.text-description {
+  font-size: 16px;
 }
