--- a/src/App.css
+++ b/src/App.css
@@ -395,6 +395,7 @@ a:hover {
   height: 100%;
   background-color: #0b486b;
 }
+
 @media (max-width: 1024px) {
   .NavBar_Split {
     display: flex;
@@ -449,7 +450,24 @@ a:hover {
     }
   }
 }
-
+@media (max-width: 700px) {
+  .Project_img {
+    width: 100%;
+    width: 400px;
+  }
+  .Content_Container {
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+  .button_container {
+    margin-top: unset;
+  }
+  #tech_skill {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
+}
 @media (max-width: 500px) {
   .NavBar_Split {
     display: flex;
