--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300&family=Roboto&family=Source+Code+Pro&display=swap');
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100%;
+  background-color: #0b486b;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+@font-face {
+  font-family: 'Noto Color Emoji';
+  font-style: normal;
+  font-weight: 400;
+  font-display: block; /* This property will help us not flash unstyled text for a couple hundred milliseconds, and then it would act like font-display: swap */
+  src: url('/fonts/NotoColorEmoji-Regular.ttf') format('woff2');
+}
 
 body {
   background-color: #0b486b;
 }
 
-.Logo_Container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-.Logo_L:hover {
-  border-color: white;
-}
-
-.Logo_L {
-  font-family: 'Roboto', sans-serif;
-  font-size: 40px;
-  border-bottom: solid 2px;
-  border-left: solid 2px;
-  border-right: solid 2px;
-  border-color: #3b8686;
-  padding-left: 2px;
-  padding-right: 2px;
-  margin-bottom: 0;
-  color: white;
-}
-
-.Logo_A {
-  font-family: 'Roboto', sans-serif;
-  font-size: 40px;
-  padding-left: 2px;
-  padding-right: 2px;
-  color: white;
-}
 .Content_NameTyped {
   margin: 0;
   font-size: 24px;
@@ -65,7 +58,7 @@ body {
   margin-top: 16px;
   opacity: 0;
   transform: translateY(3rem);
-  animation: fadeInUp 2s ease 2s forwards;
+  animation: fadeInUp 0.75s ease 1.75s forwards;
 }
 @keyframes typewriter {
   to {
@@ -87,13 +80,10 @@ body {
 }
 
 .NavBar_Container {
-  padding-top: 16px;
-  padding-bottom: 16px;
   display: flex;
   margin-right: auto;
   margin-left: auto;
   background-color: #08344d;
-  padding: 0px;
   height: 80px;
 }
 
@@ -111,22 +101,14 @@ body {
   justify-content: center;
   color: white;
   font-family: 'Roboto', sans-serif;
-  font-size: 18px;
   gap: 16px;
   cursor: pointer;
+  list-style: none;
 }
 
-.NavBar_letterss:hover {
+.NavBar_letters > li:hover {
   color: #3b8686;
-}
-.NavBar_letters > span > span.ActiveButton {
-  text-decoration: underline;
-  color: #3b8686;
-  cursor: unset !important;
-}
-.NavBar_letters > span > span:hover.unActiveButton {
-  color: #3b8686;
-  cursor: pointer;
+  list-style: none;
 }
 
 .Project {
@@ -154,7 +136,6 @@ body {
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
   max-width: 65ch;
-  height: 250px;
 }
 
 .Project_Container {
@@ -167,7 +148,7 @@ body {
 .Project_Title {
   color: white;
   padding-bottom: 60px;
-  font-size: 32px;
+  font-size: 32px !important;
   font-family: 'Roboto', sans-serif;
   text-align: center;
   color: #cff09e;
@@ -201,7 +182,6 @@ body {
 }
 .Project_img:hover {
   transform: scale(1.25);
-  cursor: pointer;
 }
 .ICON {
   display: flex;
@@ -390,11 +370,6 @@ a:hover {
 .text-description {
   font-size: 16px;
 }
-.App {
-  width: 100%;
-  height: 100%;
-  background-color: #0b486b;
-}
 
 @media (max-width: 1024px) {
   .NavBar_Split {
@@ -479,10 +454,7 @@ a:hover {
   .NavBar_letters {
     width: 100%;
   }
-  .NavBar_Container {
-    padding-left: 8px;
-    padding-right: 8px;
-  }
+
   .Logo_L {
     font-size: 16px;
   }
@@ -493,7 +465,7 @@ a:hover {
     font-size: 12px;
   }
   .NavBar_Container {
-    height: 60px;
+    height: 40px;
   }
   .Content_Container {
     width: 100%;
@@ -549,4 +521,8 @@ a:hover {
       font-size: 12px;
     }
   }
+}
+
+.emoji {
+  font-family: 'Noto Color Emoji', sans-serif;
 }
