--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,15 @@ code {
   src: url('/fonts/NotoColorEmoji-Regular.ttf') format('woff2');
 }
 
+* {
+  font-family: "Crete Round", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  /* font-style: normal;
+  font-variation-settings:
+    "wdth" 100; */
+}
+
 body {
   background-color: #0b486b;
 }
